# SIRF-SuperBuild

./: .bashrc  .gitattributes  .gitignore  .gitmodules  .mailmap  .travis.yml  .zenodo.json  CHANGES.md  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  HELP.txt  INSTALL.md  LICENSE.txt  NOTICE.txt  README.md  README.txt  SuperBuild.cmake  Using_VM_as_server.md  docker-compose.yml  env_ccppetmr.csh.in  env_ccppetmr.sh.in  env_sirf.PS1.in  env_sirf.csh.in  env_sirf.sh.in  version_config.cmake
.github/: PULL_REQUEST_TEMPLATE.md
CMake/: ExternalProjectDependency.cmake  FindACE.cmake  FindCython.cmake  FindFFTW3.cmake  FindSPM.cmake  RenameVariable.cmake  SetCanonicalDirectoryNames.cmake  SetExternalProjectFlags.cmake  SetGitTagAndRepo.cmake  append_to_file.cmake  install_NiftyPET.cmake  install_niftypet.cmake
SuperBuild/: External_ACE.cmake  External_Armadillo.cmake  External_Boost.cmake  External_Boost_buildboost.cmake  External_Boost_configureboost.cmake  External_CCPi-Astra.cmake  External_CCPi-Framework.cmake  External_CCPi-FrameworkPlugins.cmake  External_CCPi-RGL.cmake  External_CCPi-Regularisation-Toolkit.cmake  External_CIL-ASTRA.cmake  External_CIL.cmake  External_CPR.cmake  External_Date.cmake  External_FFTW3.cmake  External_FFTW3double.cmake  External_GTest.cmake  External_Gadgetron.cmake  External_HDF5.cmake  External_ISMRMRD.cmake  External_ITK.cmake  External_JSON.cmake  External_NIFTYPET.cmake  External_NIFTYREG.cmake  External_NIFTYREG1.cmake  External_NiftyPET.cmake  External_NiftyReg.cmake  External_ROOT.cmake  External_RocksDB.cmake  External_SIRF-Contribs.cmake  External_SIRF.cmake  External_SPM.cmake  External_SPM12.cmake  External_STIR.cmake  External_SWIG.cmake  External_TomoPhantom.cmake  External_armadillo.cmake  External_astra-python-wrapper.cmake  External_astra-toolbox.cmake  External_glog.cmake  (+11 more)
VirtualBox/: CHANGES.md  INSTALL.md  NOTICE.txt  README.md  Using_VM_as_server.md
conda-recipe/: build.sh  meta.yaml
docker/: .bashrc  .dockerignore  .profile  15source-sirf.sh  25clone-work.sh  35gadgetron.sh  BuildJupyterHubImage.md  DocForDevelopers.md  Dockerfile  Dockerfile-base  Dockerfile-core  LICENSE-jupyter.txt  README-old.md  README.md  SIRF-service.bat  SIRF-service.sh  build_docker_stacks.sh  build_essential-ubuntu.sh  build_gadgetron-ubuntu.sh  build_python-ubuntu.sh  build_system-ubuntu.sh  compose.sh  create_jupyter_notebook_config.sh  ctest_sirf.sh  docker-compose-build.sh  docker-compose.cil.yml  docker-compose.devel-gpu.yml  docker-compose.devel.yml  docker-compose.gpu.yml  docker-compose.nix.yml  docker-compose.srv-gpu.yml  docker-compose.srv-multi.yml  docker-compose.srv.yml  docker-compose.yml  download_data.sh  entrypoint.sh  fix-permissions  get_pip_download_link.py  install-sirf-exercises-dep.py  ls_dir.sh  (+32 more)
documentation/: Basic-usage.md  Getting-started-with-SIRF.md  README.md  Updating-VM-to-a-new-major-release.md  Using-VM-as-a-Gadgetron-server.md
jupyterhub/: BuildJupyterHubImage.md  Dockerfile  README.md  build_docker_stacks.sh  requirements.yml  sirf_env.sh
patches/: Gadgetron_include-patch.py  cil-patch.py  copy_file_if_not_exists.py  hdf5-1.8.12.patch  ismrmrd-1.37.7.patch
scripts/: ADD_REMOTE.sh  INSTALL_CMake.sh  INSTALL_ISMRMRD_PYTHON_TOOLS.sh  INSTALL_prerequisites.sh  INSTALL_prerequisites_with_apt-get.sh  INSTALL_python_packages.sh  README.md  UPDATE.sh  UPDATE_ALL.sh  bootstrap_ubuntu.sh  configure_gnome.sh  configure_jupyter.sh  first_run.sh  update_VGA.sh  update_VM.sh  update_VM_to_full_CIL.sh  update_VM_to_full_STIR.sh  update_with_backup_for_exercises.sh
(+101 files in other folders)
